2020-06-16  Mark Wielaard  <mark@klomp.org>

	* cfi.c (execute_cfi): Add missing FALLTHROUGH.

2020-05-08  Mark Wielaard  <mark@klomp.org>

	* libdw_visit_scopes.c (walk_children): Don't recurse into imported
	DW_TAG_compile_units.

2020-05-08  Mark Wielaard  <mark@klomp.org>

	* dwarf_decl_file.c (dwarf_decl_file): Use attr CU instead of DIE
	CU to resolve file name.
	* dwarf_ranges.c(dwarf_ranges): Document which CU we use when.
	* libdw.h (dwarf_attr_integrate): Extend documentation.

2020-04-25  Mark Wielaard  <mark@klomp.org>

	* libdw_alloc.c (__libdw_alloc_tail): Call Dwarf oom_handler()
	when malloc fails.

2020-04-17  Mark Wielaard  <mark@klomp.org>

	* dwarf_begin_elf.c (check_section): Handle .gnu.debuglto_ prefix.

2019-10-28  Aaron Merey  <amerey@redhat.com>

	* Makefile.am (libdw_so_LDLIBS): Add -ldl for libdebuginfod.so dlopen.

2019-11-10  Mark Wielaard  <mark@klomp.org>

	* libdwP.h (libdw_unalloc): New define.
	(libdw_typed_unalloc): Likewise.
	(__libdw_thread_tail): New function declaration.
	* libdw_alloc.c (__libdw_thread_tail): New function.
	* dwarf_getabbrev.c (__libdw_getabbrev): Call libdw_typed_unalloc
	when reading invalid data or when hash collission detected.

2019-10-28  Jonathon Anderson  <jma14@rice.edu>

	* libdw_alloc.c: Added __libdw_alloc_tail.
	(__libdw_allocate): Switch to use the mem_tails array.
	* libdwP.h (Dwarf): Likewise.
	* dwarf_begin_elf.c (dwarf_begin_elf): Support for above.
	* dwarf_end.c (dwarf_end): Likewise.
	* atomics.h: Add support for thread_local.

2019-10-28  Mark Wielaard  <mark@klomp.org>

	* dwarf_sig8_hash.h: Include libdw.h. Remove COMPARE. Include
	dynamicsizehash_concurrent.h.
	* dwarf_sig8_hash.c: Include dynamicsizehash_concurrent.c.
	* dwarf_formref_die.c (dwarf_formref_die): Drop NULL argument to
	Dwarf_Sig8_Hash_find.

2019-08-26  Srđan Milaković  <sm108@rice.edu@rice.edu>

	* dwarf_abbrev_hash.{c,h}: Use the *_concurrent hash table.

2019-11-01  Jonathon Anderson  <jma14@rice.edu>
